--- a/config/dev/job.toml
+++ b/config/dev/job.toml
@@ -1,4 +1,4 @@
-[job-base]
+[task-base]
 redisAddr = "localhost:6379"
 redisPassword = ""
 rpcAddress = "tcp@localhost:6923"
@@ -6,7 +6,7 @@ pushChan = 2
 pushChanSize = 50
 
 
-[[job-cometsAddrs]]
+[[task-cometsAddrs]]
 key = 1
 addr = "tcp@0.0.0.0:6912"
 
