--- a/docker/dev/supervisord.d/gochat_connect.ini
+++ b/docker/dev/supervisord.d/gochat_connect.ini
@@ -1,6 +1,6 @@
 [program:gochat_connect]
-command = /go/src/gochat/bin/gochat_connect.bin
-priority=2
+command = /go/src/gochat/bin/gochat.bin -module connect
+priority=4
 autorestart = true
 stderr_logfile = /tmp/gochat_connect.err
 stdout_logfile = /tmp/gochat_connect.log
