--- a/docker/dev/supervisord.d/gochat_api.ini
+++ b/docker/dev/supervisord.d/gochat_api.ini
@@ -1,6 +1,6 @@
 [program:gochat_api]
-command = /go/src/gochat/bin/gochat_api.bin
-priority=4
+command = /go/src/gochat/bin/gochat.bin -module api
+priority=6
 autorestart = true
 stderr_logfile = /tmp/gochat_api.err
 stdout_logfile = /tmp/gochat_api.log
