--- a/docker/dev/supervisord.d/gochat_logic.ini
+++ b/docker/dev/supervisord.d/gochat_logic.ini
@@ -1,6 +1,6 @@
 [program:gochat_logic]
-command = /go/src/gochat/bin/gochat_logic.bin
-priority=1
+command = /go/src/gochat/bin/gochat.bin -module logic
+priority=3
 autorestart = true
 stderr_logfile = /tmp/gochat_logic.err
 stdout_logfile = /tmp/gochat_logic.log
