--- a/docker/dev/supervisord.d/gochat_site.ini
+++ b/docker/dev/supervisord.d/gochat_site.ini
@@ -1,6 +1,6 @@
 [program:gochat_site]
-command = /go/src/gochat/bin/gochat_site.bin
-priority=5
+command = /go/src/gochat/bin/gochat.bin -module site
+priority=7
 autorestart = true
 stderr_logfile = /tmp/gochat_site.err
 stdout_logfile = /tmp/gochat_site.log
