--- a/docker/dev/supervisord.d/gochat_task.ini
+++ b/docker/dev/supervisord.d/gochat_task.ini
@@ -1,6 +1,6 @@
 [program:gochat_task]
-command = /go/src/gochat/bin/gochat_task.bin
-priority=3
+command = /go/src/gochat/bin/gochat.bin -module task
+priority=5
 autorestart = true
 stderr_logfile = /tmp/gochat_task.err
 stdout_logfile = /tmp/gochat_task.log
