--- a/docker/prod/supervisord.d/redis.ini
+++ b/docker/prod/supervisord.d/redis.ini
@@ -1,5 +1,5 @@
 [program:redis]
-command = /bin/redis-server
+command = /bin/redis-server /root/redis.conf
 priority = 2
 autorestart = true
 stderr_logfile = /tmp/redis.err
