--- a/docker/prod/redis.conf
+++ b/docker/prod/redis.conf
@@ -250,7 +250,7 @@ rdbcompression yes
 rdbchecksum yes
 
 # The filename where to dump the DB
-dbfilename /root/dump.rdb
+dbfilename dump.rdb
 
 # The working directory.
 #
@@ -260,7 +260,7 @@ dbfilename /root/dump.rdb
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir ./
+dir /root
 
 ################################# REPLICATION #################################
 
