--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@ language: go
 env:
   global:
     GO111MODULE: "on"
-script: true
-
-build:
-  - go build -tags "etcd" ./...
-
+script:
+  - go get -v -t -tags "etcd" ./...
 
