--- a/config/prod/connect.toml
+++ b/config/prod/connect.toml
@@ -6,6 +6,18 @@ keyPath = ""
 [connect-websocket]
 bind = "0.0.0.0:7000"
 
+[connect-tcp]
+bind = "tcp@0.0.0.0:7001,tcp@0.0.0.0:7002"
+sendbuf = 4096
+receivebuf = 4096
+keepalive = false
+reader = 32
+readBuf = 1024
+readBufSize = 8192
+writer = 32
+writeBuf = 1024
+writeBufSize = 8192
+
 [connect-rpcAddress]
 address = "tcp@0.0.0.0:6912,tcp@0.0.0.0:6913"
 
