--- a/config/dev/common.toml
+++ b/config/dev/common.toml
@@ -11,3 +11,7 @@ connectionTimeout = 5
 redisAddress = "redis:6379"
 redisPassword = ""
 db = 0
+
+[common-rabbitmq]
+url = "amqp://gochat:gochat_secret@rabbitmq:5672/gochat"
+prefetchCount = 10
