Add metrics and tracing instrumentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -262,6 +262,19 @@ services:
       - prometheus
     restart: unless-stopped
 
+  jaeger:
+    image: jaegertracing/all-in-one:1.51
+    container_name: gochat-jaeger
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    ports:
+      - "16686:16686"   # Jaeger UI
+      - "4317:4317"     # OTLP gRPC
+      - "4318:4318"     # OTLP HTTP
+    networks:
+      - gochat-network
+    restart: unless-stopped
+
 networks:
   gochat-network:
     driver: bridge
