--- a/config/dev/common.toml
+++ b/config/dev/common.toml
@@ -15,3 +15,8 @@ db = 0
 [common-rabbitmq]
 url = "amqp://gochat:gochat_secret@rabbitmq:5672/gochat"
 prefetchCount = 10
+
+[common-tracing]
+enabled = true
+endpoint = "jaeger:4318"
+samplingRate = 0.01
