--- a/loadtest/docker-compose.loadtest.yml
+++ b/loadtest/docker-compose.loadtest.yml
@@ -34,7 +34,7 @@ services:
       resources:
         limits:
           cpus: '1.0'
-          memory: 512M
+          memory: 2G
         reservations:
           cpus: '0.25'
           memory: 128M
