--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     volumes:
       - etcd-data:/etcd-data
     networks:
-      - gochat-network
+      gochat-network:
+        ipv4_address: 172.28.0.11
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
       interval: 10s
@@ -32,7 +33,8 @@ services:
     volumes:
       - redis-data:/data
     networks:
-      - gochat-network
+      gochat-network:
+        ipv4_address: 172.28.0.10
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
@@ -55,7 +57,8 @@ services:
       - "5672:5672"
       - "15672:15672"
     networks:
-      - gochat-network
+      gochat-network:
+        ipv4_address: 172.28.0.12
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "-q", "check_port_connectivity"]
       interval: 10s
@@ -73,6 +76,10 @@ services:
       - RUN_MODE=dev
     ports:
       - "9091:9091"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       etcd:
         condition: service_healthy
@@ -99,6 +106,10 @@ services:
     ports:
       - "7000:7000"
       - "9092:9092"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       etcd:
         condition: service_healthy
@@ -126,6 +137,10 @@ services:
       - "7001:7001"
       - "7002:7002"
       - "9093:9093"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       etcd:
         condition: service_healthy
@@ -151,6 +166,10 @@ services:
       - RUN_MODE=dev
     ports:
       - "9094:9094"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       etcd:
         condition: service_healthy
@@ -180,6 +199,10 @@ services:
       - RUN_MODE=dev
     ports:
       - "7070:7070"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       etcd:
         condition: service_healthy
@@ -205,6 +228,10 @@ services:
       - RUN_MODE=dev
     ports:
       - "8080:8080"
+    extra_hosts:
+      - "redis:172.28.0.10"
+      - "etcd:172.28.0.11"
+      - "rabbitmq:172.28.0.12"
     depends_on:
       api:
         condition: service_healthy
@@ -228,8 +255,9 @@ services:
       - '--storage.tsdb.retention.time=7d'
       - '--web.console.libraries=/usr/share/prometheus/console_libraries'
       - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--web.enable-remote-write-receiver'
     ports:
-      - "9090:9090"
+      - "19090:9090"
     volumes:
       - ./deployments/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus-data:/prometheus
