--- a/loadtest/docker-compose.loadtest.yml
+++ b/loadtest/docker-compose.loadtest.yml
@@ -4,28 +4,36 @@
 #   docker compose -f docker-compose.yml -f loadtest/docker-compose.loadtest.yml run k6 run /scripts/full-system.js
 
 services:
-  # Override infrastructure services with resource limits
+  # Override infrastructure services with resource limits (halved for bottleneck testing)
   etcd:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 256M
-        reservations:
           cpus: '0.25'
           memory: 128M
+        reservations:
+          cpus: '0.1'
+          memory: 64M
 
   redis:
+    command: >
+      redis-server
+      --save ""
+      --maxmemory 200mb
+      --maxmemory-policy allkeys-lru
+      --appendonly no
+      --tcp-keepalive 60
+      --timeout 0
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 512M
-        reservations:
           cpus: '0.25'
-          memory: 128M
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 64M
 
-  # Override application services with resource limits
+  # Override application services with resource limits (halved for bottleneck testing)
   logic:
     environment:
       - RUN_MODE=dev
@@ -33,11 +41,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
-          memory: 2G
+          cpus: '0.5'
+          memory: 1G
         reservations:
-          cpus: '0.25'
-          memory: 128M
+          cpus: '0.1'
+          memory: 64M
 
   connect-ws:
     environment:
@@ -46,52 +54,13 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: '0.5'
           memory: 512M
         reservations:
-          cpus: '0.25'
+          cpus: '0.1'
           memory: 128M
 
   connect-tcp:
-    environment:
-      - RUN_MODE=dev
-      - LOG_LEVEL=warn
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-
-  task:
-    environment:
-      - RUN_MODE=dev
-      - LOG_LEVEL=warn
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-
-  api:
-    environment:
-      - RUN_MODE=dev
-      - LOG_LEVEL=warn
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 128M
-
-  site:
     environment:
       - RUN_MODE=dev
       - LOG_LEVEL=warn
@@ -104,6 +73,45 @@ services:
           cpus: '0.1'
           memory: 64M
 
+  task:
+    environment:
+      - RUN_MODE=dev
+      - LOG_LEVEL=warn
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 64M
+
+  api:
+    environment:
+      - RUN_MODE=dev
+      - LOG_LEVEL=warn
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.1'
+          memory: 64M
+
+  site:
+    environment:
+      - RUN_MODE=dev
+      - LOG_LEVEL=warn
+    deploy:
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 128M
+        reservations:
+          cpus: '0.05'
+          memory: 32M
+
   # k6 Load Testing Container
   k6:
     image: grafana/k6:0.49.0
@@ -112,9 +120,15 @@ services:
       - ./loadtest/scripts:/scripts:ro
       - ./loadtest/reports:/reports
     environment:
-      - K6_OUT=json=/reports/results.json
+      # Note: Do NOT use K6_OUT=json as it writes every sample and causes OOM on long tests
+      # Reports are generated via handleSummary() in each test script
       - API_BASE_URL=http://api:7070
       - WS_URL=ws://connect-ws:7000/ws
+      # Prometheus Remote Write - streams metrics in real-time
+      # Even if k6 crashes, data is already in Prometheus/Grafana
+      - K6_PROMETHEUS_RW_SERVER_URL=http://prometheus:9090/api/v1/write
+      - K6_PROMETHEUS_RW_TREND_AS_NATIVE_HISTOGRAM=true
+      - K6_PROMETHEUS_RW_PUSH_INTERVAL=5s
     networks:
       - gochat-network
     working_dir: /scripts
